# RT-Market-Movement-Prediction

./: .dvcignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  REPORT.md  docker-compose.yml  dvc.yaml  mlflow_config.py  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
airflow/dags/: market_pulse_dag.py
frontend/: app.py
huggingface/: DEPLOY.md  Dockerfile  README.md  start.sh
models/: bilstm_attention_AAPL.pt  bilstm_attention_AMZN.pt  bilstm_attention_GOOGL.pt  bilstm_attention_META.pt  bilstm_attention_MSFT.pt  bilstm_attention_TSLA.pt  gru_AAPL.pt  gru_AMZN.pt  gru_GOOGL.pt  gru_META.pt  gru_MSFT.pt  gru_TSLA.pt  lstm_AAPL.pt  lstm_AMZN.pt  lstm_GOOGL.pt  lstm_META.pt  lstm_MSFT.pt  lstm_TSLA.pt  rnn_AAPL.pt  rnn_AMZN.pt  rnn_GOOGL.pt  rnn_META.pt  rnn_MSFT.pt  rnn_TSLA.pt
results/: model_comparison.csv
scripts/: deploy_ec2.sh  deploy_space.py  distribute_commits.sh  distribute_commits.sh.bak  git_setup.sh  run_ingestion.py  run_pipeline.py  run_training.py  upload_to_hf.py
src/: __init__.py  config.py
src/api/: __init__.py  main.py  routes.py  schemas.py
src/data_ingestion/: news_rss.py  newsdata_api.py  reddit_scraper.py  yahoo_finance.py
src/evaluation/: __init__.py  metrics.py
src/feature_engineering/: __init__.py  dataset_builder.py  sentiment_aggregator.py  technical_indicators.py
src/models/: __init__.py  base_model.py  bilstm_attention.py  gru_model.py  lstm_model.py  rnn_model.py  trainer.py
tests/: test_api.py  test_features.py  test_ingestion.py  test_models.py  test_sentiment.py
(+6 files in other folders)
